# FTXUI

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  GEMINI.md  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  animation_8cpp.html  animation_8cpp_source.html  animation_8cppm.html  animation_8cppm_source.html  animation_8hpp.html  animation_8hpp.js  animation_8hpp__dep__incl.map  animation_8hpp__dep__incl.md5  animation_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  app_8cpp.html  app_8cpp.js  app_8cpp_source.html  app_8cppm.html  app_8cppm_source.html  app_8hpp.html  app_8hpp.js  app_8hpp_source.html  automerge_8cpp.html  automerge_8cpp_source.html  autoreset_8cppm.html  autoreset_8cppm_source.html  (+1680 more)
bazel/test/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  smoke.cpp
bazel_integration/: BUILD.bazel  MODULE.bazel  README.md  smoke.cpp
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  build-with-nxxm.md  cpp-modules.md  cpp20-modules.md  doxygen_extra.css  doxygen_footer.html  doxygen_header.html  doxygen_layout.xml  example_list.h  example_list.md  footer.html  getting-started.md  header.html  installation.md  installation_amalgamated.md  installation_arch.md  installation_bazel.md  installation_cmake.md  installation_conan.md  installation_debian.md  installation_manual.md  installation_meson.md  installation_nix.md  installation_opensuse.md  installation_vcpkg.md  installation_xmake.md  introduction.md  mainpage.md  module-component.md  module-dom.md  module-screen.md  module.md  posix_pipe.md  stylesheet.css  tutorial.md
examples/: CMakeLists.txt  index.css  index.html  index.mjs  meson.build  print_key_press.cpp  run_webassembly.py  run_webassembly.sh  sw.js
examples/color/: CMakeLists.txt  main.cpp
examples/component/: CMakeLists.txt  button.cpp  button_animated.cpp  button_in_frame.cpp  button_style.cpp  canvas_animated.cpp  checkbox.cpp  checkbox_in_frame.cpp  collapsible.cpp  color.cpp  composition.cpp  custom_loop.cpp  dropdown.cpp  dropdown_custom.cpp  flexbox.cpp  flexbox_gallery.cpp  focus.cpp  focus_cursor.cpp  ftxui_example_button.js  ftxui_example_button.wasm  ftxui_example_button_animated.js  ftxui_example_button_animated.wasm  ftxui_example_button_in_frame.js  ftxui_example_button_in_frame.wasm  ftxui_example_button_style.js  ftxui_example_button_style.wasm  ftxui_example_canvas_animated.js  ftxui_example_canvas_animated.wasm  ftxui_example_checkbox.js  ftxui_example_checkbox.wasm  ftxui_example_checkbox_in_frame.js  ftxui_example_checkbox_in_frame.wasm  ftxui_example_collapsible.js  ftxui_example_collapsible.wasm  ftxui_example_composition.js  ftxui_example_composition.wasm  ftxui_example_custom_loop.js  ftxui_example_custom_loop.wasm  ftxui_example_dropdown.js  ftxui_example_dropdown.wasm  (+124 more)
examples/dom/: CMakeLists.txt  blink.cpp  bold.cpp  border.cpp  border_colored.cpp  border_style.cpp  canvas.cpp  color.cpp  color_gallery.cpp  color_info_palette256.cpp  color_info_sorted_2d.ipp  color_truecolor_HSV.cpp  color_truecolor_RGB.cpp  dbox.cpp  dim.cpp  flexbox.cpp  frame.cpp  ftxui_example_border.js  ftxui_example_border.wasm  ftxui_example_border_colored.js  ftxui_example_border_colored.wasm  ftxui_example_border_style.js  ftxui_example_border_style.wasm  ftxui_example_canvas.js  ftxui_example_canvas.wasm  ftxui_example_color_gallery.js  ftxui_example_color_gallery.wasm  ftxui_example_color_info_palette256.js  ftxui_example_color_info_palette256.wasm  ftxui_example_color_truecolor_HSV.js  ftxui_example_color_truecolor_HSV.wasm  ftxui_example_color_truecolor_RGB.js  ftxui_example_color_truecolor_RGB.wasm  ftxui_example_dbox.js  ftxui_example_dbox.wasm  ftxui_example_gauge.js  ftxui_example_gauge.wasm  ftxui_example_gauge_direction.js  ftxui_example_gauge_direction.wasm  ftxui_example_graph.js  (+86 more)
examples/frame/: CMakeLists.txt  main.cpp
examples/gauge/: CMakeLists.txt  main.cpp
examples/html/: test.html.disabled
examples/input/: CMakeLists.txt  main.cpp
examples/menu/: CMakeLists.txt
examples/menu2/: CMakeLists.txt  main.cpp
examples/print_key_press/: CMakeLists.txt  main.cpp
examples/separator/: CMakeLists.txt  main.cpp
examples/text/: CMakeLists.txt  main.cpp
examples/toggle/: CMakeLists.txt  main.cpp
examples/util/: CMakeLists.txt  print_key_press.cpp
examples/vbox_hbox/: CMakeLists.txt  main.cpp
ftxui/: CMakeLists.txt
ftxui/include/ftxui/: README.md  color.hpp  event.hpp  requirement.hpp  screen.hpp  screen_interactive.hpp
ftxui/src/ftxui/: event.cpp  screen.cpp  screen_interactive.cpp  terminal.cpp
modules/ftxui/: CMakeLists.txt  component.cppm  dom.cppm  screen.cppm  util.cppm
modules/ftxui/component/: Animation.cppm  CapturedMouse.cppm  Component.cppm  ComponentBase.cppm  ComponentOptions.cppm  Event.cppm  Loop.cppm  Mouse.cppm  Receiver.cppm  ScreenInteractive.cppm  Task.cppm
modules/ftxui/dom/: Deprecated.cppm  LinearGradient.cppm  Node.cppm  Requirement.cppm
modules/ftxui/screen/: Color.cppm  ColorInfo.cppm  Image.cppm
modules/ftxui/util/: AutoReset.cppm
src/ftxui/component/: Animation.cppm  CapturedMouse.cppm  Component.cppm  ComponentBase.cppm  ComponentOptions.cppm  Event.cppm  Loop.cppm  ScreenInteractive.cppm  Task.cppm  animation.cpp  animation.cppm  animation_test.cpp  app.cpp  app.cppm  app_piped_input_test.cpp  app_test.cpp  button.cpp  button_test.cpp  canvas_fuzzer.cpp  captured_mouse.cppm  catch_event.cpp  catch_event_test.cpp  checkbox.cpp  checkbox_test.cpp  collapsible.cpp  collapsible_test.cpp  color_fuzzer.cpp  component.cpp  component.cppm  component_base.cppm  component_fuzzer.cpp  component_options.cpp  component_options.cppm  component_test.cpp  container.cpp  container_test.cpp  dom_layout_fuzzer.cpp  dropdown.cpp  dropdown_test.cpp  event.cpp  (+56 more)
src/ftxui/dom/: Canvas.cppm  Direction.cppm  Elements.cppm  FlexboxConfig.cppm  Selection.cppm  Table.cppm  automerge.cpp  benchmark_test.cpp  blink.cpp  blink_test.cpp  bold.cpp  bold_test.cpp  dim.cpp  (+85 more)
(+22530 files in other folders)
